--- a/app/views/documents/show.html.erb
+++ b/app/views/documents/show.html.erb
@@ -12,6 +12,10 @@
     <% end %>
   <% end %>
 </p>
+
+
+<p>Corrected: <%= @thing %></p>
+
 <% @count = 0 %>
 <% @sentence.each do |element| %>
   <% if element.word? %>
